# eu4_modding_tools

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  gui_scaling.md  placeholder.md  prompts.toml  pyproject.toml  ruff.toml
.github/workflows/: development.yml  main.yml
GFX/: GFX_SCRIPT.py  logging.txt
GUI/: scale_gui_files.bat
GUI/gui_files/: scaling_script.py
app/: config.py  main.py
app/api/: openrouter_text_generation.py  replicate_image_generation.py
app/core/: config.py  db.py
app/functions/: gui_file_scaler.py  image_processing.py  robot.py  text_processing.py
app/scale_ui_example/: rescale_gfx.py  rescale_interface.py
app/utils/: checks.py  file_utils.py  logging_utils.py
backend/: .ruff.toml  README.md  gui_file_scaler.py  image_processing.py  main.py  planning.md  pyproject.toml  ruff.toml  test.py
backend/api/: litellm_text_generation.py  openrouter.py  replicate_image_generation.py
backend/app/: __init__.py  gui_file_scaler.py  image_processing.py  main.py  scaling_script.py  terrain_script.py  text_script.py
backend/app/api/: litellm_text_generation.py  openrouter_text_generation.py  replicate_image_generation.py  runpod_image_generation.py
backend/app/core/: config.py  db.py
backend/app/database/: SQLite.db  geography.py  models.py  relationships.py
backend/app/functions/: data_extraction.py  data_generation.py  data_modification.py  image_processing.py  original_text.py  text_processing.py  text_processing_backup.py  text_search.py
backend/app/images/events/: event_pictures.md
backend/app/images/misc/common/: graphicalculturetype.txt
backend/app/images/misc/common/countries/: Bengal.txt
backend/app/images/misc/common/cultures/: 00_cultures.txt
backend/app/images/misc/map/: 000_RUTP_combat_terrain.gfx  example_terrain.txt  explainer.md
backend/app/robot/: Anbennar_Art Style.md  __init__.py  docstring_gen.md  docstring_gen.py  events.yaml  prompt.md  terrain.toml  terrain.yaml  toml.md
backend/app/scripts/: runpod.sh
backend/app/utils/: checks.py  db_utils.py  file_utils.py  logging_utils.py
backend/content/output_dds_files/: AELNAR_eventPicture.DDS
backend/core/: config.py
backend/robot/: agent.py  council_of_bots.py  documenter.py
backend/utils/: file_utils.py  logging_utils.py
frontend/other/: text_dump_2.md  text_dump_8.md
resources/output_1440p/something/: Ardim_Qarast.dds  Bixanrit.dds  Bogorr.dds  Corinite_Adm_Order.dds  Corinite_Dip_Order.dds  Corinite_Mil_Order.dds  DWARVEN_RAIL_eventPicture.dds  FORGE_eventPicture.dds  FUNGRUM_eventPicture.dds  Gamyi.dds  advanced_rail.dds  aerial_assault.dds  ahati_influence_modifier.dds  ahati_loyalty_modifier.dds  ahati_loyalty_modifier_opposite.dds  alerticons.dds  all_races_adventurer_contracts.dds  all_races_bottomless_bag.dds  all_races_fodder.dds  all_races_mage_shields.dds  all_races_protection_charms.dds  all_races_specialised_troops.dds  all_races_war_games.dds  all_races_windshapers.dds  ambush_tactics.dds  artifice_tier_emblems_strip.dds  artificery_close_inventions_menu.dds  artificery_information.dds  artificery_innovation_economic.dds  artificery_innovation_economic_small.dds  artificery_innovation_military.dds  artificery_innovation_military_small.dds  artificery_innovation_society.dds  artificery_innovation_society_small.dds  artificery_innovation_unique.dds  artificery_innovation_unique_small.dds  artificery_see_capacity_fake_button.dds  artificery_tab_icon.dds  beast_memory.dds  centralized_clan_education.dds  (+56 more)
resources/output_2160p/something/: Ardim_Qarast.dds  Bixanrit.dds  Bogorr.dds  Corinite_Adm_Order.dds  Corinite_Dip_Order.dds  Corinite_Mil_Order.dds  DWARVEN_RAIL_eventPicture.dds  FORGE_eventPicture.dds  FUNGRUM_eventPicture.dds  Gamyi.dds  advanced_rail.dds  aerial_assault.dds  ahati_influence_modifier.dds  ahati_loyalty_modifier.dds  ahati_loyalty_modifier_opposite.dds  alerticons.dds  all_races_adventurer_contracts.dds  all_races_bottomless_bag.dds  all_races_fodder.dds  all_races_mage_shields.dds  all_races_protection_charms.dds  all_races_specialised_troops.dds  all_races_war_games.dds  all_races_windshapers.dds  ambush_tactics.dds  artifice_tier_emblems_strip.dds  artificery_close_inventions_menu.dds  artificery_innovation_economic.dds  artificery_innovation_economic_small.dds  artificery_innovation_military.dds  artificery_innovation_military_small.dds  artificery_innovation_society.dds  artificery_innovation_society_small.dds  artificery_innovation_unique.dds  artificery_innovation_unique_small.dds  artificery_see_capacity_fake_button.dds  artificery_tab_icon.dds  beast_memory.dds  centralized_clan_education.dds  chahinanito_blessing_select.dds  (+51 more)
