[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bjornbryggman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1.0"
Wand = "^0.6.13"
litellm = "^1.35.29"
replicate = "^0.25.2"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
