[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bjornbryggman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.2.0"
Wand = "^0.6.13"
replicate = "^0.25.2"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
instructor = "^1.3.4"
openai = "^1.25.0"
ruff = "^0.4.10"
requests = "^2.32.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
