[project]
name = "EU4-Modding-Tools"
version = "0.4"
description = "Various scripts for modding Europa Universalis 4."
requires-python = ">=3.12"
dependencies = [
    "structlog >= 24.2.0",
    "Wand >= 0.6.13",
    "replicate >= 0.25.2",
    "python-dotenv >= 1.0.1",
    "pydantic >= 2.8.2",
    "instructor >= 1.3.4",
    "openai >= 1.25.0",
    "requests >= 2.32.3",
    "sqlmodel >= 0.0.19"
]
authors = [
  {name = "Björn Gunnar Bryggman", email = "bjorn.bryggman@gmail.com"}
]
maintainers = [
  {name = "Björn Gunnar Bryggman", email = "bjorn.bryggman@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}


[project.urls]
Repository = "https://github.com/bjornbryggman/EU4-Modding-Tools.git"
"Bug Tracker" = "https://github.com/bjornbryggman/EU4-Modding-Tools/issues"

[tool.rye]
managed = true
generate-hashes = true
dev-dependencies = [
    "ruff >= 0.4.10"
]
